--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ body {
 
 /* Main */
 
+.flex-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .desktop-image {
   display: none;
 }
@@ -129,6 +135,59 @@ body {
   font-family: var(--ff-inter);
   font-weight: var(--fw-400);
   color: var(--c-stat-headings);
+}
+
+@media screen and (min-width: 1000px) {
+  .main-container {
+    width: 90%;
+    flex-direction: row-reverse;
+    max-width: 1100px;
+  }
+
+  .image-container {
+    max-width: none;
+    border-top-left-radius: none;
+    border-bottom-right-radius: 10px;
+  }
+
+  .mobile-image {
+    display: none;
+  }
+
+  .desktop-image {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    opacity: 0.5;
+    border-top-right-radius: 10px;
+    border-top-left-radius: none;
+  }
+
+  .list {
+    flex-direction: row;
+    gap: 90px;
+  }
+
+  .content {
+    height: 100%;
+    text-align: left;
+    padding: 0 50px;
+    padding-right: 100px;
+    align-items: flex-start;
+  }
+
+  .heading,
+  .paragraph {
+    padding: 0;
+  }
+
+  .heading {
+    margin-top: -30px;
+  }
+
+  .paragraph {
+    margin-bottom: 30px;
+  }
 }
 
 /* Attribution*/
